# password_manager_2.0

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  display.cpp  display.h  main.cpp
src/libAPIs/: CMakeLists.txt
src/libFunctions/: CMakeLists.txt  functions.cpp  functions.h
